--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Payment Request Comparator</title>
+    <title>Request Comparator</title>
     <style>
         * {
             margin: 0;
@@ -181,93 +181,143 @@
         .pair-header {
             display: flex;
             justify-content: space-between;
-            align-items: center;
-            margin-bottom: 10px;
+            align-items: flex-start;
+            margin-bottom: 20px;
+            padding-bottom: 15px;
+            border-bottom: 1px solid rgba(0,0,0,0.06);
+        }
+
+        .pair-info-section {
+            flex: 1;
         }
 
         .pair-id {
-            font-weight: bold;
-            font-size: 16px;
+            font-weight: 700;
+            font-size: 18px;
+            color: #2c3e50;
+            margin-bottom: 8px;
+        }
+
+        .pair-meta {
+            display: flex;
+            flex-direction: column;
+            gap: 4px;
         }
 
         .pair-info {
-            font-size: 12px;
-            color: #666;
-            margin: 5px 0;
+            font-size: 13px;
+            color: #6c757d;
+            font-weight: 500;
         }
 
-        .badge {
-            padding: 2px 8px;
-            border-radius: 12px;
+        .pair-connector {
+            font-size: 13px;
+            color: #495057;
+            font-weight: 600;
+        }
+
+        .status-badge {
+            padding: 6px 12px;
+            border-radius: 20px;
             font-size: 11px;
-            font-weight: bold;
-            margin-left: 5px;
+            font-weight: 600;
+            text-transform: uppercase;
+            letter-spacing: 0.5px;
+            border: 1px solid transparent;
         }
 
-        .badge-flow {
-            background: #e3f2fd;
+        .status-pending {
+            background: linear-gradient(135deg, #fff3cd 0%, #ffeaa7 100%);
+            color: #856404;
+            border-color: rgba(133, 100, 4, 0.2);
+        }
+
+        .status-compared {
+            background: linear-gradient(135deg, #d1edff 0%, #a8dadc 100%);
+            color: #0c5460;
+            border-color: rgba(12, 84, 96, 0.2);
+        }
+
+        .source-badge {
+            padding: 4px 10px;
+            border-radius: 12px;
+            font-size: 10px;
+            font-weight: 600;
+            text-transform: uppercase;
+            letter-spacing: 0.5px;
+            display: inline-block;
+            margin-right: 8px;
+        }
+
+        .source-ucs {
+            background: linear-gradient(135deg, #e3f2fd 0%, #bbdefb 100%);
             color: #1976d2;
+            border: 1px solid rgba(25, 118, 210, 0.2);
         }
 
-        .badge-connector {
-            background: #fff3e0;
-            color: #f57722;
-        }
-
-        .badge-ucs {
-            background: #e8f5e8;
-            color: #2e7d32;
-        }
-
-        .badge-hs {
-            background: #f3e5f5;
+        .source-hs {
+            background: linear-gradient(135deg, #f3e5f5 0%, #e1bee7 100%);
             color: #7b1fa2;
+            border: 1px solid rgba(123, 31, 162, 0.2);
         }
 
-        .requests {
+        .requests-summary {
             display: grid;
             grid-template-columns: 1fr 1fr;
             gap: 15px;
-            margin: 10px 0;
+            margin: 15px 0;
         }
 
-        .request {
-            border: 1px solid #eee;
-            border-radius: 4px;
-            padding: 10px;
-            background: #fafafa;
+        .request-summary {
+            border: 1px solid rgba(0,0,0,0.06);
+            border-radius: 12px;
+            padding: 15px;
+            background: linear-gradient(135deg, rgba(255,255,255,0.8) 0%, rgba(248,249,250,0.8) 100%);
+            backdrop-filter: blur(5px);
         }
 
-        .request-title {
-            font-weight: bold;
-            margin-bottom: 5px;
+        .request-summary-title {
+            font-weight: 600;
+            margin-bottom: 8px;
             font-size: 14px;
+            color: #2c3e50;
         }
 
-        .request-details {
+        .request-summary-details {
             font-size: 12px;
-            color: #666;
-            font-family: monospace;
+            color: #6c757d;
+            line-height: 1.4;
         }
 
         .compare-btn {
             width: 100%;
-            padding: 10px;
-            background: #4CAF50;
+            padding: 14px 20px;
+            background: linear-gradient(135deg, #4CAF50 0%, #45a049 100%);
             color: white;
             border: none;
-            border-radius: 4px;
+            border-radius: 12px;
             cursor: pointer;
             font-size: 14px;
-            margin-top: 10px;
+            font-weight: 600;
+            margin-top: 15px;
+            transition: all 0.3s ease;
+            box-shadow: 0 4px 15px rgba(76, 175, 80, 0.3);
+            text-transform: uppercase;
+            letter-spacing: 0.5px;
         }
 
         .compare-btn:hover {
-            background: #45a049;
+            transform: translateY(-2px);
+            box-shadow: 0 8px 25px rgba(76, 175, 80, 0.4);
         }
 
         .compare-btn.viewed {
-            background: #2196F3;
+            background: linear-gradient(135deg, #2196F3 0%, #1976d2 100%);
+            box-shadow: 0 4px 15px rgba(33, 150, 243, 0.3);
+        }
+
+        .compare-btn.viewed:hover {
+            box-shadow: 0 8px 25px rgba(33, 150, 243, 0.4);
         }
 
         .empty-state {
@@ -648,8 +698,8 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1>Payment Request Comparator</h1>
-            <p>Compare HyperSwitch payment requests</p>
+            <h1>Request Comparator</h1>
+            <p>Compare payment requests side by side</p>
         </div>
 
         <div class="stats">
@@ -746,36 +796,36 @@
                 return `
                     <div class="pair-card">
                         <div class="pair-header">
-                            <div>
-                                <div class="pair-id">${pair.id}</div>
-                                <div class="pair-info">
-                                    ${pair.xRequestId ? `Request ID: ${pair.xRequestId}` : 'Auto-paired'}
-                                    ${pair.xFlow ? `<span class="badge badge-flow">🌊 ${pair.xFlow}</span>` : ''}
-                                    ${pair.xConnector ? `<span class="badge badge-connector">🔌 ${pair.xConnector}</span>` : ''}
+                            <div class="pair-info-section">
+                                <div class="pair-id">${pair.xRequestId || 'Auto-paired'}</div>
+                                <div class="pair-meta">
+                                    ${pair.xConnector ? `<div class="pair-connector">Connector: ${pair.xConnector}</div>` : ''}
+                                    <div class="pair-info">Created: ${new Date(pair.createdAt).toLocaleString()}</div>
                                 </div>
-                                <div class="pair-info">Created: ${new Date(pair.createdAt).toLocaleString()}</div>
                             </div>
                             <div>
-                                <span class="badge ${pair.compared ? 'badge-ucs' : 'badge-connector'}">${pair.compared ? 'Compared' : 'Pending'}</span>
+                                <span class="status-badge ${pair.compared ? 'status-compared' : 'status-pending'}">${pair.compared ? 'Compared' : 'Pending'}</span>
                             </div>
                         </div>
 
-                        <div class="requests">
-                            <div class="request">
-                                <div class="request-title">
-                                    Request 1 <span class="badge ${source1.toLowerCase() === 'ucs' ? 'badge-ucs' : 'badge-hs'}">${source1}</span>
+                        <div class="requests-summary">
+                            <div class="request-summary">
+                                <div class="request-summary-title">
+                                    <span class="source-badge ${source1.toLowerCase() === 'ucs' ? 'source-ucs' : 'source-hs'}">${source1}</span>
+                                    Request 1
                                 </div>
-                                <div class="request-details">
+                                <div class="request-summary-details">
                                     Method: ${req1.method}<br>
                                     Time: ${new Date(req1.timestamp).toLocaleTimeString()}<br>
                                     Amount: $${req1.body?.createTransactionRequest?.transactionRequest?.amount || 'N/A'}
                                 </div>
                             </div>
-                            <div class="request">
-                                <div class="request-title">
-                                    Request 2 <span class="badge ${source2.toLowerCase() === 'ucs' ? 'badge-ucs' : 'badge-hs'}">${source2}</span>
+                            <div class="request-summary">
+                                <div class="request-summary-title">
+                                    <span class="source-badge ${source2.toLowerCase() === 'ucs' ? 'source-ucs' : 'source-hs'}">${source2}</span>
+                                    Request 2
                                 </div>
-                                <div class="request-details">
+                                <div class="request-summary-details">
                                     Method: ${req2.method}<br>
                                     Time: ${new Date(req2.timestamp).toLocaleTimeString()}<br>
                                     Amount: $${req2.body?.createTransactionRequest?.transactionRequest?.amount || 'N/A'}
@@ -784,7 +834,7 @@
                         </div>
 
                         <button class="compare-btn ${pair.compared ? 'viewed' : ''}" onclick="comparePair('${pair.id}')">
-                            ${pair.compared ? '👁️ View Comparison' : '🔍 Compare'}
+                            ${pair.compared ? 'View Comparison' : 'Compare'}
                         </button>
                     </div>
                 `;
